2009-06-25  Jorge Gonzalez  <jorgegonz@aartica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-06-25  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/functions_db.php, operation/snmpconsole/snmp_view.php,
	* operation/agentes/status_monitor.php,
	* operation/agentes/estado_grupo.php,
	* operation/agentes/estado_ultimopaquete.php,
	* operation/agentes/alerts_status.php,
	* operation/agentes/estado_generalagente.php,
	* operation/agentes/estado_agente.php,
	* operation/agentes/exportdata.php,
	* operation/agentes/estado_monitores.php,
	* operation/agentes/tactical.php, operation/agentes/networkmap.php,
	* operation/reporting/reporting_viewer.php, reporting/fgraph.php,
	* general/pandora_help.php, general/logoff.php,
	* general/logon_failed.php, godmode/setup/setup.php,
	* godmode/setup/links.php, godmode/snmpconsole/snmp_alert.php,
	* godmode/profiles/profile_list.php, godmode/db/db_main.php,
	* godmode/db/db_audit.php, godmode/db/db_refine.php,
	* godmode/db/db_info.php, godmode/db/db_event.php,
	* godmode/db/db_purge.php,
	* godmode/agentes/massive_delete_agents.php,
	* godmode/agentes/massive_config.php,
	* godmode/agentes/massive_delete_alerts.php,
	* godmode/agentes/massive_edit_modules.php,
	* godmode/agentes/module_manager.php,
	* godmode/agentes/massive_delete_modules.php,
	* godmode/agentes/configurar_agente.php,
	* godmode/agentes/planned_downtime.php,
	* godmode/modules/manage_network_templates_form.php,
	* godmode/modules/manage_network_components.php,
	* godmode/reporting/map_builder.php,
	* godmode/reporting/map_builder_wizard.php,
	* godmode/servers/manage_export.php,
	* godmode/servers/manage_export_form.php,
	* godmode/servers/plugin.php, godmode/servers/modificar_server.php,
	* godmode/servers/manage_recontask_form.php,
	* godmode/alerts/alert_compounds.php, godmode/menu.php: Some
	* translatable strings reused to simplify i18n work.
